# OTUS-C-Professional

./: Document_8cpp.html  Document_8cpp__incl.map  Document_8cpp__incl.md5  Document_8h.html  Document_8h__dep__incl.map  Document_8h__dep__incl.md5  Document_8h__incl.map  Document_8h__incl.md5  Document_8h_source.html  Editable_8h.html  Editable_8h__dep__incl.map  Editable_8h__dep__incl.md5  Editable_8h__incl.map  Editable_8h__incl.md5  Editable_8h_source.html  Editor_8h.html  Editor_8h__dep__incl.map  Editor_8h__dep__incl.md5  Editor_8h__incl.map  Editor_8h__incl.md5  Editor_8h_source.html  Shape_8h.html  Shape_8h__dep__incl.map  Shape_8h__dep__incl.md5  Shape_8h__incl.map  Shape_8h__incl.md5  Shape_8h_source.html  Square_8h.html  Square_8h__dep__incl.map  Square_8h__dep__incl.md5  Square_8h__incl.map  Square_8h__incl.md5  Square_8h_source.html  annotated.html  classDocument-members.html  classDocument.html  classDocument__coll__graph.md5  classDocument__inherit__graph.map  classEditor-members.html  classEditor.html  (+31 more)
HW2/: ip_filter.cpp
HW3/: CMakeLists.txt  custom_container.h  custom_tools.cpp  reserving_allocator.h
HW4/: CMakeLists.txt  Doxyfile  ip_printer.cpp  ip_printer.h
HW5/: CMakeLists.txt  Document.cpp  Document.h  Doxyfile  Editable.h  Editor.h  Image.cpp  Image.h  Shape.h  Square.h  main.cpp  myDoc_export.txt  myDoc_import.txt
HW6/: CMakeLists.txt  SpareMatrix.h  main.cpp
HW7/: CMakeLists.txt  bulk.cpp
search/: all_0.js  all_2.js  all_3.js  all_5.js  all_6.js  all_a.js  all_b.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_3.js  (+9 more)
(+1 files in other folders)
